# web-services

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.bdd  Dockerfile.profiling  Dockerfile.testing  README.md  config.yml  description.md  docker-compose.yml  gunicorn_config.py  index.yaml  pyproject.toml  requirements.txt  settings.py
anomaly-api/: pyproject.toml
anomaly-api/anomaly_api/: api.py
anomaly-api/anomaly_api/routes/: rest.py
anomaly-api/anomaly_api/templates/: test_template.jinja.html
anomaly-api/scripts/: run_anomaly.py
anomaly_api/: .djlintrc  .prettierignore  eslint.config.mjs  flake.nix  pyproject.toml  tailwind.config.js
anomaly_api/scripts/: run_anomaly.py
anomaly_api/src/anomaly_api/: api.py
anomaly_api/src/db/: main.py  main_psql.py
anomaly_api/tests/unit/: test_db.py
anomaly_service/: pyproject.toml
anomaly_service/tests/mockdata/: create_mock_data.py
anomaly_service/tests/unit/: test_database_models.py
astroobject/: Dockerfile  entrypoint.sh  pyproject.toml
astroobject/api/: container.py  main.py  routes.py
astroobject/api/dto/: output.py
astroobject/core/application/: astroobject_service.py
astroobject/core/domain/: astroobject_model.py  astroobject_queries.py  astroobject_repository.py
astroobject/core/infrastructure/: astroobject_sql_repository.py  orm.py
astroobject/core/ioc/: container.py
astroobject/core/shared/: sql.py
astroobject/tests/integration/: conftest.py  docker-compose.yaml  test_sql_repository.py
astroobject/tests/unittests/: test_application.py  test_domain.py
ci_new/: chart_script.py  main.py  pyproject.toml  ssm.py
ci_new/cli/: build.py  deploy.py  update.py
ci_new/core/: build.py  deploy.py  update.py  utils.py
fastapi_app/: pyproject.toml
fastapi_app/src/: main.py
fastapi_app/src/routers/: astroobject.py  classifier.py  feature.py  lightcurve.py  magstats.py  probability.py
libs/ralidator-core/: README.md  pyproject.toml  settings.py
libs/ralidator-fastapi/: README.md  pyproject.toml
libs/ralidator-fastapi/ralidator_fastapi/: __init__.py  decorators.py  ralidator_fastapi.py
libs/ralidator-fastapi/tests/: test_decorators.py
lightcurve/: .env.example  .gitignore  .prettierignore  Dockerfile  README.html  README.md  docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.js  trigger  trigger.txt  variables.env
lightcurve/scripts/: entrypoint.sh  run_banner.py  run_crossmatch.py  run_dev.py  run_magstats_dev.py  run_object_dev.py  run_probability_dev.py  run_scores.py  sshproxy.py
lightcurve/src/api/: api.py  filters.py  result_handler.py  routes.py
lightcurve/src/banner_api/: api.py
lightcurve/src/config/: config.py
lightcurve/src/core/: compute_periodogram.py  exceptions.py  harmonics.py  model.py  models.py  object_model.py  object_service.py  service.py
lightcurve/src/crossmatch_api/: api.py  api_cross.py  get_crossmatch_data.py
lightcurve/src/database/: mongo.py  sql.py  sql_models.py
lightcurve/src/lightcurve_api/: api.py
lightcurve/src/magstats_api/: api.py
lightcurve/src/object_api/: api.py  parameters.py  result_handler.py
lightcurve/src/probability_api/: api.py  filters.py
lightcurve/src/scores_api/: api.py
lightcurve/src/tns_api/: api.py
lightcurve/tests/: conftest.py  docker-compose.yml  mongo-init.js  test_api.py  test_api_detections.py  test_api_forced_photometry.py  test_api_lightcurve.py  test_api_non_detections.py  test_multistream_schema.py  test_plots_apparent.py  test_plots_difference.py  test_service.py  test_service_detections.py  test_service_forced_photometry.py  test_service_lightcurve.py  test_service_mongo.py  test_service_non_detections.py  test_service_period.py  test_service_psql.py  test_utils.py  utils.py
lightcurve/tests/data/: aaelulu.json  forced_mongo.json  forced_photometry_202311301515.json  load.py
lightcurve/tests/profiling/: docker-compose.yaml  entrypoint.sh  initdb.py  loadtest.py  memray-flamegraph.html
lightcurve/virtual-env/: pyvenv.cfg
magstats/: Dockerfile  entrypoint.sh  pyproject.toml
magstats/api/: api.py  magstats.py  models.py  result_handler.py  routes.py
magstats/core/: exceptions.py  models.py  service.py
magstats/database/: mongo.py  sql.py
magstats/tests/: conftest.py  test_api.py  test_service.py
magstats/tests/profiling/: docker-compose.yaml  entrypoint.sh  initdb.py  loadtest.py
multisurvey-stamps/: Dockerfile  pyproject.toml  tailwind.config.js  trial.py
multisurvey-stamps/scripts/: run_api.py
multisurvey-stamps/src/multisurvey_stamps/: api.py
multisurvey-stamps/src/s3_handler/: __init__.py  base_handler.py  fits_to_png.py  lsst.py  ztf.py
multisurveys-apis/: .gitignore  Dockerfile  Dockerfile-psql  README.md  data.json  docker-compose.yaml  install-tailwind.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
multisurveys-apis/db-plugins-multisurvey/db_plugins/: settings.py
multisurveys-apis/db-plugins-multisurvey/db_plugins.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
multisurveys-apis/dummy_data/: create_data.py  create_tables.py  taxonomy_old.csv  taxonomy_public.csv
multisurveys-apis/scripts/: decode_oid.py  initdb.py  measuring_response_time.py  populate_database.py  run_api.py  run_dev.py  run_lightcurve_dev.py  run_magstats_dev.py  run_object_dev.py
multisurveys-apis/src/aladin_api/: api.py
multisurveys-apis/src/assets/: tailwind.css
multisurveys-apis/src/classifier_api/: api.py
multisurveys-apis/src/core/: exceptions.py
multisurveys-apis/src/crossmatch_api/: api.py  get_crossmatch_data.py  result_handler.py
multisurveys-apis/src/lightcurve_api/: api.py
multisurveys-apis/src/static/: julian.js  (+6 more)
tns_api/: .gitignore  Dockerfile  pyproject.toml
tns_api/scripts/: build_tns_parquet.py  run_tns.py  run_tns_dev.py
tns_api/tns_api/: api.py
xmatch-service/: Dockerfile  pyproject.toml
xmatch-service/tests/: conftest.py  docker-compose.yaml  test_api.py  test_database.py  test_grpc.py  test_service.py
ztf_api/: README.md  config.yml  description.md  pyproject.toml
(+973 files in other folders)
