[tool.poetry]
name = "ralidator-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ralidator_fastapi"}]

[tool.poetry.dependencies]
python = "^3.8"
ralidator_core = { git = "git@github.com:alercebroker/ralidator-core.git", branch="main" }


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
