[tool.poetry]
name = "anomaly-api"
version = "0.1.0"
description = ""
authors = ["Demurest <eric.apolonio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anomaly = "scripts.run_anomaly:run"
tunnel = "scripts.sshproxy:run_tunnel"

