[tool.poetry]
name = "anomaly-api"
version = "0.1.0"
description = ""
authors = ["Demurest <eric.apolonio@hotmail.com>"]
readme = "README.md"
packages = [{include = "anomaly_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
