[tool.poetry]
name = "anomaly-api"
version = "0.1.0"
description = ""
authors = ["Demurest <eric.apolonio@hotmail.com>"]
readme = "README.md"
packages = [{include = "anomaly_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"     
psycopg2-binary = "^2.9.6"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.19" }
db-plugins = "^24.5.2a11"
pandas = "^2.2.1"
jinja2 = "^3.1.2"
httpx = "^0.24.1"
pgvector = "^0.3.6"
pydantic = "^2.9.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
