[tool.poetry]
name = "astroobject"
version = "0.1.0"
description = ""
authors = ["Pedro Gallardo <pedrogallardorobinson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
fastapi = "^0.100.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-docker = "^2.0.0"
black = "^23.7.0"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
