[tool.poetry]
name = "astroobject"
version = "24.8.1-rc31"
description = ""
authors = ["Pedro Gallardo <pedrogallardorobinson@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}, {include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
fastapi = "^0.109.1"
uvicorn = "^0.23.1"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.28.0"
prometheus-fastapi-instrumentator = "^6.1.0"
db-plugins = { version = "5.1.1", python = ">=3.11,<3.12"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-docker = "^2.0.0"
black = "^23.7.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
