[tool.poetry]
name = "build"
version = "0.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "cli" }, { include = "core" }]

[tool.poetry.dependencies]
python = "^3.11"
dagger-io = "^0.18.9"
boto3 = "^1.28.41"
pyyaml = "^6.0.1"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ci = "main:app"
build = "cli.build:app"
update = "cli.update:app"
deploy = "cli.deplot:app"
