[tool.poetry]
name = "fastapi-app"
version = "0.1.1a41"
description = ""
authors = ["Pedro Gallardo <pedrogallardorobinson@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.1"
uvicorn = "0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
