[tool.poetry]
name = "lightcurve"
version = "24.9.1-rc117"
description = "Get lightcurve of objects from ZTF and ATLAS surveys"
authors = ["Diego Rodriguez Mancini"]
readme = "README.md"
packages = [
    { include = "core", from = "src" },
    { include = "config", from = "src" },
    { include = "lightcurve_api", from = "src" },
    { include = "magstats_api", from = "src" },
    { include = "object_api", from = "src" },
    { include = "database", from = "src" },
]

[tool.poetry.dependencies]
fastapi = "^0.100.0"
python = ">=3.11,<3.12"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.19" }
pymongo = "^4.4.1"
returns = "^0.21.0"
psycopg2-binary = "^2.9.6"
ralidator-fastapi = { path = "../libs/ralidator-fastapi", develop = true }
prometheus-fastapi-instrumentator = "^6.1.0"
jinja2 = "^3.1.2"
httpx = "^0.24.1"
db-plugins = "^24.5.2a11"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
cython = "^3.0.9"
P4J = [
    { platform = "linux", url = "https://github.com/alercebroker/pipeline/releases/download/P4J-24.3.1/P4J-1.2.0-cp311-cp311-linux_x86_64.whl" },
    { platform = "darwin", url = "https://github.com/alercebroker/pipeline/releases/download/P4J-24.3.1/P4J-1.2.0-cp311-cp311-macosx_14_0_x86_64.whl" }
]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-docker = "^3.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.production.dependencies]
uvicorn = { extras = ["standard"], version = "^0.23.1" }

[tool.poetry.group.profiling.dependencies]
memray = "^1.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
sshtunnel = "^0.4.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "Cython==0.29.36", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
dev = "scripts.run_dev:run"
magstats = "scripts.run_magstats_dev:run"
object_detail = "scripts.run_object_dev:run"
tunnel = "scripts.sshproxy:run_tunnel"
