[tool.poetry]
name = "magstats"
version = "0.1.0"
description = ""
authors = ["mmolina2018 <mmolina2018@inf.udec.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-docker = "^2.0.0"
black = "^23.7.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
